# cura

./: .gitignore  CLAUDE.md  README.md  TEAM.md  arm_control.py  bottle.json  calibrate.sh  final_scoop.json  final_scoop2.json  mac_vision.py  pi_arm_server.py  pyproject.toml  run.py  run.sh  setup.sh  setup_pi.sh  teach.sh  test.py  test_move_p.py  waypoints.json
piper_sdk/: bottle_pick.json  bottle_pick1.json  chopsticks.json  chopsticks2.json  record_waypoints.py  replay_waypoints.py  scoop.json  server.py  test.py
piper_sdk/piper_sdk/: set_slave.py
piper_sdk/piper_sdk/interface/: piper_interface.py  piper_interface_v2.py
piper_sdk/piper_sdk/piper_msgs/msg_v2/transmit/: arm_joint_config.py
prints/: README.md
scripts/: test_camera.py
src/cura/: __init__.py  main.py
src/cura/arm/: __init__.py  controller.py  safety.py  trajectories.py
src/cura/config/: __init__.py  settings.py
src/cura/interface/: __init__.py  models.py  server.py
src/cura/vision/: __init__.py  camera.py  detector.py  mouth_tracker.py
t5ai/: CMakeLists.txt  README.md
t5ai/src/: cura_camera.c  cura_camera.h  cura_config.h  cura_http.c  cura_http.h  cura_stream.c  cura_stream.h  cura_ui.c  cura_ui.h  main.c
tests/: test_arm.py  test_integration.py  test_interface.py  test_vision.py
