[project]
name = "cura"
version = "0.1.0"
description = "AI-powered robotic feeding assistant for hospital patients"
requires-python = ">=3.11"
dependencies = [
    "piper-sdk",
    "python-can>=3.3.4",
    "opencv-python",
    "pyorbbecsdk2",
    "mediapipe",
    "ultralytics",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "numpy",
    "python-multipart",
]

[project.scripts]
cura = "cura.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cura"]
