[project]
name = "cura"
version = "0.1.0"
description = "AI-powered robotic feeding assistant for hospital patients"
requires-python = ">=3.11"
dependencies = [
    "piper-sdk",
    "python-can[gs-usb]>=3.3.4",
    "pyserial",
    "opencv-python",
    "pyorbbecsdk2; sys_platform == 'linux'",
    "mediapipe; not (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "ultralytics",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "numpy",
    "python-multipart",
    "gs-usb>=0.3.1",
]

[project.scripts]
cura = "cura.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cura"]
